--- a/README
+++ b/README
@@ -26,7 +26,15 @@ If you happen to not call your milestones, "milestones", or for any other reason
 
 And that will still result in the marker being labeled with "Next Week" instead.
 
-By default, the milestone markers will be only appear in the Rails development environment.  To customize this, add the following to environment.rb
+By default, the milestone markers will be only appear in the Rails development environment.  To customize this, add the following to the config file of the other environments you want the markers to appear:
+
+Thoughtbot::MileMarker.enable
+
+If you prefer not to have it on in development, add the following to development.rb
+
+Thoughtbot::MileMarker.disable
+
+Or, if you prefer, add something like the following to environment.rb:
 
 Thoughtbot::MileMarker.environments = %w(development staging production)
 
