--- a/README
+++ b/README
@@ -38,6 +38,13 @@ Or, if you prefer, add something like the following to environment.rb:
 
 Thoughtbot::MileMarker.environments = %w(development staging production)
 
+You can also change some of the styling options (as of right now, just the z-index and background color) by modifying the options hash:
+
+Thoughtbot::MileMarker.options.update(
+	:z_index => 100,
+	:background_color => "purple"
+)
+
 == Requirements
 
 The overlay functionality requires javascript, and uses the prototype library.  So, any page that is using this functionality must also include prototype.
